--- a/Paper/sources.bib
+++ b/Paper/sources.bib
@@ -375,6 +375,48 @@
                   and sample programs.}
 }
 
+@Article{SciPy:2020,
+  author  = {Virtanen, Pauli and Gommers, Ralf and Oliphant, Travis E. and
+            Haberland, Matt and Reddy, Tyler and Cournapeau, David and
+            Burovski, Evgeni and Peterson, Pearu and Weckesser, Warren and
+            Bright, Jonathan and {van der Walt}, St{\'e}fan J. and
+            Brett, Matthew and Wilson, Joshua and Millman, K. Jarrod and
+            Mayorov, Nikolay and Nelson, Andrew R. J. and Jones, Eric and
+            Kern, Robert and Larson, Eric and Carey, C J and
+            Polat, {\.I}lhan and Feng, Yu and Moore, Eric W. and
+            {VanderPlas}, Jake and Laxalde, Denis and Perktold, Josef and
+            Cimrman, Robert and Henriksen, Ian and Quintero, E. A. and
+            Harris, Charles R. and Archibald, Anne M. and
+            Ribeiro, Ant{\^o}nio H. and Pedregosa, Fabian and
+            {van Mulbregt}, Paul and {SciPy 1.0 Contributors}},
+  title   = {{{SciPy} 1.0: Fundamental Algorithms for Scientific
+            Computing in Python}},
+  journal = {Nature Methods},
+  year    = {2020},
+  volume  = {17},
+  pages   = {261--272},
+  adsurl  = {https://rdcu.be/b08Wh},
+  doi     = {10.1038/s41592-019-0686-2},
+}
+
+@article{davis:2011,
+  author = {Timothy A. Davis and Yifan Hu},
+  title = {The university of Florida sparse matrix collection},
+  year = {2011},
+  issue_date = {November 2011},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  volume = {38},
+  number = {1},
+  issn = {0098-3500},
+  doi = {10.1145/2049662.2049663},
+  journal = {ACM Trans. Math. Softw.},
+  month = {dec},
+  articleno = {1},
+  numpages = {25},
+  keywords = {sparse matrices, performance evaluation, multilevel algorithms, Graph drawing}
+}
+
 % Local Variables:
 % bibtex-dialect: biblatex
 % comment-start: "%"
