Mention harmonize more

--- a/Paper/Paper.org
+++ b/Paper/Paper.org
@@ -195,7 +195,7 @@ Typically, the Gauss-Jordan algorithm requires appending a $n \times n$ unit mat
 
 Due to the nature of GPU architecture, threads within the same warp are not able to execute different paths in parallel. This limits the performance of workloads that contain conditional branching or uneven allocation of work as branches are serialized. Largely divergent workloads can try to avoid this overhead by periodically reshuffling data to reduce the divergence inside warps; this technique is called Thread-Data Remapping (TDR). The most common form of TDR involves stopping all work at set intervals and performing synchronization. This approach is less than ideal since full workload synchronization requires the CPU to step in and handle workload discrepancies between runs. Communication between the CPU and GPU is expensive and should be avoided if possible.
 
-A better approach, introduced by **Cuneo and Bailey [cite:@cuneo:2024]**, handles TDR entirely on-GPU by implementing a work scheduling mechanism that is reminiscent of the promise and future concurrency model. While not the first on-GPU TDR, Cuneo and Bailey's method is the first to allow remapping across blocks without synchronization.
+A better approach, introduced by **Cuneo and Bailey [cite:@cuneo:2024]**, handles TDR entirely on-GPU by implementing a work scheduling mechanism that is reminiscent of the promise and future concurrency model. While not the first on-GPU TDR, Cuneo and Bailey's method is the first to allow remapping across blocks without synchronization. The results of their research are available for other to use in Harmonize [cite:@harmonize] a CUDA\reg C++ and Python\trade library developed by Cuneo.
 
 * Background
 
@@ -355,7 +355,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 
 ** Deliverables
 
-During the research, we developed three key implementations of matrix inversion. These implementations demonstrated our understanding of the problem and validated our research results. The first implementation, called ~cpu-inverse~, runs Algorithm [[algo-2]] in a single serial CPU thread. This program verified the validity of the inverse algorithm and helped in troubleshooting race conditions in the parallel implementations. The next program, ~inverse~, applies Algorithm [[algo-2]] on the GPU using standard CPU-based kernel synchronization. This implementation is comparable to the work of Sharma et al. [cite:@sharma:2013], with the optimizations from DasGupta [cite:@dasgupta:2013]. The final program, ~tdr-inverse~, summarizes our research results and uses the Harmonize\copy library to optimize matrix inversion through Thread-Data Remapping.
+During the research, we developed three key implementations of matrix inversion. These implementations demonstrated our understanding of the problem and validated our research results. The first implementation, called ~cpu-inverse~, runs Algorithm [[algo-2]] in a single serial CPU thread. This program verified the validity of the inverse algorithm and helped in troubleshooting race conditions in the parallel implementations. The next program, ~inverse~, applies Algorithm [[algo-2]] on the GPU using standard CPU-based kernel synchronization. This implementation is comparable to the work of Sharma et al. [cite:@sharma:2013], with the optimizations from DasGupta [cite:@dasgupta:2013]. The final program, ~tdr-inverse~, summarizes our research results and uses the Harmonize [cite:@harmonize] library to optimize matrix inversion through Thread-Data Remapping.
 
 ** Performance Analysis
 
