--- a/Paper/sources.bib
+++ b/Paper/sources.bib
@@ -417,6 +417,14 @@
   keywords = {sparse matrices, performance evaluation, multilevel algorithms, Graph drawing}
 }
 
+@software{harmonize,
+  author = {Braxton Cuneo},
+  title = {Harmonize},
+  url = {https://github.com/CEMeNT-PSAAP/harmonize},
+  version = {d2eb926},
+  date = {2024-05-07},
+}
+
 % Local Variables:
 % bibtex-dialect: biblatex
 % comment-start: "%"
